--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,10 @@
         <ion-icon name="information-circle"></ion-icon>
         <ion-label>Mi Perfil</ion-label>
       </ion-tab-button>
+      <ion-tab-button tab="Logout">
+        <ion-icon name="log-out"></ion-icon>
+        <ion-label>Log out</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 
