--- a/src/app/pages/profesores/profesores.page.html
+++ b/src/app/pages/profesores/profesores.page.html
@@ -6,4 +6,12 @@
 
 <ion-content>
 
+
+  
+
+      <div class="col-lg-12">
+        <app-empresas></app-empresas>
+                </div>
+
+
 </ion-content>
