--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -8,9 +8,9 @@
   
     <div class="login-page">
 
- <ion-title style="text-align: center;">DualApp</ion-title>
+ 
 
-  <form [formGroup]="myForm" (ngSubmit)="onLogin(myForm.value)" class="form-signin">
+  <form [formGroup]="myForm" class="form-signin">
 
 
 
@@ -32,10 +32,11 @@
   
 
 
-<ion-button type="submit" expand="full">Log In</ion-button>
+<ion-button type="submit" (click)="onLogin(myForm.value)" expand="full">Log In</ion-button>
 
 
 </form>
+
 </div>
 </div>
 <div>
