--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,8 @@
         <ion-icon name="information-circle"></ion-icon>
         <ion-label>Mi Perfil</ion-label>
       </ion-tab-button>
-      <ion-tab-button tab="Logout">
+
+      <ion-tab-button tab="Logout" (click)="logOut()">
         <ion-icon name="log-out"></ion-icon>
         <ion-label>Log out</ion-label>
       </ion-tab-button>
