--- a/src/app/pages/ciclos/ciclos.page.html
+++ b/src/app/pages/ciclos/ciclos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title style="text-align: center;">Empresas</ion-title>
+    <ion-title style="text-align: center;">Ciclos</ion-title>
   </ion-toolbar>
 
 </ion-header>
@@ -10,15 +10,15 @@
     <ion-row>
       <ion-col size="12" size-xs="12" size-sm="6" size-md="4" size-lg="3">
   <div style="margin-top: 8vh;" *ngIf="!detalles && !tareas">
-  <ion-card  style="width: 40vh;margin-left: 3vh;"*ngFor="let empresa of empresasArray">
+  <ion-card  style="width: 40vh;margin-left: 3vh;"*ngFor="let ciclo of ciclosArray">
     <img src="https://s1.logaster.com/static/v3/img/products/logo.png"/>
     <ion-card-header>
-      <ion-card-title>{{empresa.Nombre}}</ion-card-title>
-      <ion-card-subtitle>{{empresa.TutorEmpresa}}</ion-card-subtitle>
+      <ion-card-title>{{ciclo.Nombre}}</ion-card-title>
+      <ion-card-subtitle>{{ciclo.Profesor}}</ion-card-subtitle>
       
     </ion-card-header>
     <ion-card-content>
-      <ion-button color="danger" *ngIf="usuario.Rol=='profesor'" (click)="borrarEmpresa(empresa)">Eliminar</ion-button>
+      <ion-button color="danger" *ngIf="usuario.Rol=='profesor'" (click)="borrarCiclo(ciclo)">Eliminar</ion-button>
     </ion-card-content>
   </ion-card>
 </div>
