--- a/src/app/pages/profesores/profesores.page.html
+++ b/src/app/pages/profesores/profesores.page.html
@@ -1,17 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profesores</ion-title>
+    <ion-title style="text-align: center;">Profesores</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
-<ion-content>
-
-
-  
-
-      <div class="col-lg-12">
-        <app-empresas></app-empresas>
-                </div>
-
-
+<ion-content fullscreen>
+  <div style="margin-top: 8vh;" *ngIf="!detalles && !tareas">
+  <ion-card  style="width: 40vh;margin-left: 3vh;"*ngFor="let profesor of arrayUsuarios">
+    <img src="https://s1.logaster.com/static/v3/img/products/logo.png"/>
+    <ion-card-header>
+      <ion-card-title>{{profesor.Nombre}}</ion-card-title>
+      <ion-card-subtitle>{{profesor.Apellido}}</ion-card-subtitle>
+      
+    </ion-card-header>
+    <ion-card-content>
+      <ion-button color="danger" (click)="eliminarUsuario(profesor)">Eliminar</ion-button>
+    </ion-card-content>
+  </ion-card>
+</div>
 </ion-content>
