--- a/src/app/pages/auth/auth.page.scss
+++ b/src/app/pages/auth/auth.page.scss
@@ -2,7 +2,9 @@
   
 
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
-
+.my-custom-class {
+  --background: #e5e5e5;
+}
 body {
   margin:0;
 }
