Añadir tareas, perfil etc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,12 +44,12 @@
       
     
     
-      <ion-tab-button tab="Miperfil">
+      <ion-tab-button (click)="verMiperfil()">
         <ion-icon name="information-circle"></ion-icon>
         <ion-label>Mi Perfil</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="Logout" (click)="logOut()">
+      <ion-tab-button (click)="logOut()">
         <ion-icon name="log-out"></ion-icon>
         <ion-label>Log out</ion-label>
       </ion-tab-button>
