--- a/src/app/pages/datos-alumno/datos-alumno.page.html
+++ b/src/app/pages/datos-alumno/datos-alumno.page.html
@@ -94,10 +94,11 @@
     
   <ngx-datatable-column name="Actions" sortable="false">
     <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-      <ion-button size="small" color="warning" (click)="openModal(row)">Detalles</ion-button>
+      <ion-button size="small" color="warning" (click)="openModal(row)">Ver</ion-button>
       <ion-button size="small" color="warning" (click)="openTarea(row)">Tarea</ion-button>
     </ng-template>
   </ngx-datatable-column>
+
 
 
 <!-- 
