--- a/src/app/modals/anadirtarea/anadirtarea.page.html
+++ b/src/app/modals/anadirtarea/anadirtarea.page.html
@@ -34,7 +34,7 @@
     formControlName="Nombre"></ion-input>
   </ion-item>
   
-
+<!-- 
   <ion-item>
     <ion-icon name="school" item-start></ion-icon>
     <ion-label stacked>Autoevaluación</ion-label>
@@ -47,7 +47,7 @@
       <ion-select-option >E</ion-select-option>
     </ion-select>
     <ion-button size="small" color="success"  (click)="submitForm(myForm.value)">Añadir</ion-button>
-  </ion-item>
+  </ion-item>-->
 </form>
 
 </ion-content>
