--- a/src/app/pages/ciclos/ciclos.page.html
+++ b/src/app/pages/ciclos/ciclos.page.html
@@ -9,9 +9,9 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="12" size-xs="12" size-sm="6" size-md="4" size-lg="3">
-  <div style="margin-top: 8vh;" *ngIf="!detalles && !tareas">
-  <ion-card  style="width: 38vh;margin-left: 3vh;"*ngFor="let ciclo of ciclosArray">
-    <img src="https://s1.logaster.com/static/v3/img/products/logo.png"/>
+  <div style="margin-top: 3vh;" *ngIf="!detalles && !tareas">
+  <ion-card  style="width: 32vh;margin-left: 3vh;"*ngFor="let ciclo of ciclosArray; let i = index">
+    <img [src]="ciclo.fotoCiclo"/>
     <ion-card-header>
       <ion-card-title>{{ciclo.Nombre}}</ion-card-title>
       <ion-card-subtitle>{{ciclo.Profesor}}</ion-card-subtitle>
@@ -20,6 +20,7 @@
     <ion-card-content>
       <ion-button color="danger" *ngIf="usuario.Rol=='profesor'" (click)="borrarCiclo(ciclo)">Eliminar</ion-button>
     </ion-card-content>
+    <br>
   </ion-card>
 </div>
 </ion-col>
