--- a/src/app/pages/datos-alumno/datos-alumno.page.html
+++ b/src/app/pages/datos-alumno/datos-alumno.page.html
@@ -126,10 +126,45 @@
 
 </ngx-datatable>
 
+<ion-button size="small" color="warning" (click)="openDiario()">Nuevo diario</ion-button>
+
+</div>
+<div class="ion-padding">
+<ngx-datatable 
+        class="material"
+        [limit]="8" 
+        [rows]="rows2" 
+        [loadingIndicator]="loadingIndicator"
+        [rowHeight]="'auto'"
+        [columns]="columns2"
+        [columnMode]="'force'" 
+        [sortType]="'multi'" 
+        [headerHeight]="50" 
+        [footerHeight]="50">
+  
+        <ngx-datatable-column name="Fecha" prop="Fecha">
+          <ng-template let-row="row" ngx-datatable-cell-template>
+            {{row.Fecha}}
+          </ng-template>
+        </ngx-datatable-column>
+     
+
+      <ngx-datatable-column name="Descripcion" prop="Descripcion">
+        <ng-template let-row="row" ngx-datatable-cell-template>
+          {{row.Descripcion}}
+        </ng-template>
+      </ngx-datatable-column>
+    
+      <ngx-datatable-column name="Actions" sortable="false">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          <ion-button size="small" color="warning" (click)="borrarDiario(row)">Borrar</ion-button>
+        </ng-template>
+      </ngx-datatable-column>
+</ngx-datatable>
+
+</div>
 
 
-
-    </div>
     
   </ion-grid>
 </ion-content>
